reverted - IDEA-205954 [Boot JDK11] When staring IDEA from terminal - warnings are shown "OpenJDK 64-Bit Server VM warning: Option UseConcMarkSweepGC was deprecated"
(cherry picked from commit 8f229d6c022a63c76626b69c0177fdc4f1f07610)

IDEA-CR-50111

(cherry picked from commit 3f038491fe045e9db120cbda23dca60383ef74de)

GitOrigin-RevId: f818bc4be4b134f8320ce5420f3f7ce331ba54f0